--- a/views/children/activities.jade
+++ b/views/children/activities.jade
@@ -1,3 +1,22 @@
-extends ../templates/template.jade
+extends ../templates/templateAppChildren.jade
+
 block title
 	title Actividades
+
+block titleSection
+	p Actividades
+
+block content
+	section.activities
+		article.activity
+			img.img(src="/images/activities/activity.png", alt="")
+			p.title lorem lorem lorem lorem
+		article.activity
+			img.img(src="/images/activities/activity.png", alt="")
+			p.title lorem lorem lorem lorem
+		article.activity
+			img.img(src="/images/activities/activity.png", alt="")
+			p.title lorem lorem lorem lorem
+		article.activity
+			img.img(src="/images/activities/activity.png", alt="")
+			p.title lorem lorem lorem lorem
