--- a/views/management/lineEvolution.jade
+++ b/views/management/lineEvolution.jade
@@ -1,3 +1,8 @@
-extends ../templates/template.jade
+extends ../templates/templateAppManagement.jade
 block title
 	title Evolucion
+
+block titleSection
+	p Evolucion
+
+block content
