--- a/views/children/reminders.jade
+++ b/views/children/reminders.jade
@@ -1,4 +1,8 @@
-extends ../templates/template.jade
+extends ../templates/templateAppChildren.jade
 block title
 	title Recordatorios
 
+block titleSection
+	p Recordatorios
+
+block content
