--- a/views/management/statistics.jade
+++ b/views/management/statistics.jade
@@ -1,3 +1,8 @@
-extends ../templates/template.jade
+extends ../templates/templateAppManagement.jade
 block title
 	title Estadisticas
+
+block titleSection
+	p Estadisticas
+
+block content
