--- a/views/templates/template.jade
+++ b/views/templates/template.jade
@@ -2,8 +2,9 @@ doctype html
 html(lang='es')
 	head
 		meta(charset='UTF-8')
-		meta(name='viewport' content="width=width-device, user-scalable=no")
+		meta(name='viewport' content="width=width-device, user-scalable=no, initial-scale=1.0")
 		block title
 		link(rel='stylesheet', href='/css/styles.css')
 	body
-		block content
+		section.contentWidth
+			block content
