--- a/views/children/reminders.jade
+++ b/views/children/reminders.jade
@@ -1,4 +1,5 @@
 extends ../templates/templateAppChildren.jade
+
 block title
 	title Recordatorios
 
@@ -6,3 +7,29 @@ block titleSection
 	p Recordatorios
 
 block content
+	section.reminders
+		article.reminder.complete
+			article.title
+				p lorem lorem
+			article.date.morning
+				p 6:00:00
+					span.meridiem AM
+		article.reminder.complete
+			article.title
+				p lorem lorem
+			article.date.morning
+				p 12:00:00
+					span.meridiem M
+		article.reminder.inprocess
+			article.title
+				p lorem lorem
+			article.date.nigth
+				p 6:00:00
+					span.meridiem PM
+		article.reminder.incomplete
+			article.title
+				p lorem lorem
+			article.date.nigth
+				p 7:00:00
+					span.meridiem PM
+
