--- a/views/children/messages.jade
+++ b/views/children/messages.jade
@@ -18,3 +18,5 @@ block content
 			article.message(class="#{classCss}" data-speech="#{message.text}")
 				p.title #{message.text}
 
+block script
+	script(src="/js/messages.js")
