Configuracion para deployment en heroku y añadiendo soporte basico para 'speech to text

--- a/views/templates/templateAppChildren.jade
+++ b/views/templates/templateAppChildren.jade
@@ -21,4 +21,5 @@ html(lang='es')
 			block content
 		script(src="/js/utilities.js")
 		script(src='/js/voice.js')
+		script(src='/js/text.js')
 		block script
