Refactorizacion de js

--- a/views/templates/confirmActivityWindow.jade
+++ b/views/templates/confirmActivityWindow.jade
@@ -2,4 +2,4 @@ template#templateConfirmActivityWindow
 	section.templateConfirmActivityWindow
 		button.btn.btnSuccess#buttonCaptureVoice
 			span.icon-voice
-	script(src="/js/captureVoice.js")
+	script(src="/js/confirmActivity.js")
