--- a/views/templates/templateAppChildren.jade
+++ b/views/templates/templateAppChildren.jade
@@ -20,6 +20,6 @@ html(lang='es')
 					block titleSection
 			block content
 		script(src="/js/utilities.js")
-		script(src='/js/voice.js')
-		script(src='/js/text.js')
+		script(src='/js/textToSpeech.js')
+		script(src='/js/speechToText.js')
 		block script
