Estilizacion de vistas de managements

--- a/public/stylus/styles.styl
+++ b/public/stylus/styles.styl
@@ -1,6 +1,7 @@
 @import 'normalize'
 @import 'lib/modal'
 @import 'lib/buttons'
+@import 'lib/forms'
 
 @import 'icomoon/style'
 @import url(https://fonts.googleapis.com/css?family=Lato)
@@ -153,3 +154,15 @@ header
 	font-size 10rem
 	.btn
 		width 40%
+
+/*Templates management*/
+.styleRed
+	background-color #EA4335
+.styleYellow
+	background-color #FBBC05
+.styleBlue
+	background-color #4285F4
+.styleGreen
+	background-color #34A853
+.styleOscure
+	background-color #455A64
