--- a/views/children/activities.jade
+++ b/views/children/activities.jade
@@ -17,7 +17,7 @@ block modal
 block content
 	section.activities
 		each activity in activities
-			article.activity(data-date="#{activity.hour}" data-speech="#{activity.textSpeech}")
+			article.activity(data-date="#{activity.hour}" data-speech="#{activity.textSpeech}" data-id="#{activity._id}" data-text="#{activity.text}")
 				p.titleActivity #{activity.text}
 				img.imgActivity(src=" #{activity.img}", alt="")
 				article.reminder.inprocess
