--- a/views/templates/confirmActivityWindow.jade
+++ b/views/templates/confirmActivityWindow.jade
@@ -1,5 +1,5 @@
 template#templateConfirmActivityWindow
 	section.templateConfirmActivityWindow
-		button.btn.btnSuccess#buttonCaptureVoice
+		button.btn.btnSuccess.btnRound#buttonCaptureVoice
 			span.icon-voice
 	script(src="/js/confirmActivity.js")
