--- a/views/templates/templateAppChildren.jade
+++ b/views/templates/templateAppChildren.jade
@@ -16,6 +16,8 @@ html(lang='es')
 							span.icon-activities(tooltip="Actividades")
 						a.item(href="/children/messages")
 							span.icon-messages(tooltip="Mensajes")
+						a.item(href="/children/treasure")
+							span.icon-treasure(tooltip="Tesoros")
 				section.titleSection
 					block titleSection
 			block content
