--- a/views/templates/templateAppManagement.jade
+++ b/views/templates/templateAppManagement.jade
@@ -17,7 +17,7 @@ html(lang='es')
 						a.item(href="/management/line-evolution")
 							span.icon-timeline(tooltip="Linea De Evolucion")
 						a.item(href="/management/collections")
-							span.icon-(tooltip="Collecione") Collections
+							span.icon-database(tooltip="Collecione")
 				section.titleSection
 					block titleSection
 			block content
