--- a/public/stylus/icomoon/style.styl
+++ b/public/stylus/icomoon/style.styl
@@ -1,10 +1,10 @@
 @font-face {
     font-family: 'icomoon';
-    src:    url('fonts/icomoon.eot?810qk7');
-    src:    url('fonts/icomoon.eot?810qk7#iefix') format('embedded-opentype'),
-        url('fonts/icomoon.ttf?810qk7') format('truetype'),
-        url('fonts/icomoon.woff?810qk7') format('woff'),
-        url('fonts/icomoon.svg?810qk7#icomoon') format('svg');
+    src:    url('fonts/icomoon.eot?esxeja');
+    src:    url('fonts/icomoon.eot?esxeja#iefix') format('embedded-opentype'),
+        url('fonts/icomoon.ttf?esxeja') format('truetype'),
+        url('fonts/icomoon.woff?esxeja') format('woff'),
+        url('fonts/icomoon.svg?esxeja#icomoon') format('svg');
     font-weight: normal;
     font-style: normal;
 }
@@ -38,5 +38,11 @@
 }
 .icon-statistics:before {
     content: "\e904";
+}
+.icon-database:before {
+    content: "\e905";
+}
+.icon-treasure:before {
+    content: "\e906";
 }
 
