--- a/public/stylus/lib/forms.styl
+++ b/public/stylus/lib/forms.styl
@@ -1,10 +1,29 @@
 .formRound
+	.inputContainer
+		align-items center
+		display flex
+		margin-bottom 5px
+		input, select
+			width 70%
+		.label
+			font-size 1.5rem
+			font-weight bold
+			padding-right 5px
+			text-align right
+			width 30%
+		.input
+			//input
+		.select
+			//select
+		.check
+			//radio/checkbox
 	input, select
-		border-radius 3px
 		appearance: none
 		border 1px solid gray
-		padding 3px
+		border-radius 3px
 		margin 0 5px
 		outline none
+		padding 3px
 		&:focus
 			box-shadow 0px 0px 11px 0px rgba(0,0,0,0.1)
+
