--- a/views/index.jade
+++ b/views/index.jade
@@ -1,4 +1,7 @@
 extends templates/template.jade
-block title
-	title rememberHelp
 
+block title
+	title Remember Help
+
+block titleSection
+	p Conoce la App
