--- a/views/templates/templateAppManagement.jade
+++ b/views/templates/templateAppManagement.jade
@@ -10,7 +10,8 @@ html(lang='es')
 		section.contentWidth
 			header(class="#{classcss}")
 				nav
-					h3 rememberHelp
+					h3
+						a(href = "/") rememberHelp
 					article.itemsNavs
 						a.item(href="/management/statistics")
 							span.icon-statistics(tooltip="Estadisticas")
