--- a/public/stylus/icomoon/style.styl
+++ b/public/stylus/icomoon/style.styl
@@ -1,10 +1,10 @@
 @font-face {
     font-family: 'icomoon';
-    src:    url('fonts/icomoon.eot?esxeja');
-    src:    url('fonts/icomoon.eot?esxeja#iefix') format('embedded-opentype'),
-        url('fonts/icomoon.ttf?esxeja') format('truetype'),
-        url('fonts/icomoon.woff?esxeja') format('woff'),
-        url('fonts/icomoon.svg?esxeja#icomoon') format('svg');
+    src:    url('fonts/icomoon.eot?sx6yw0');
+    src:    url('fonts/icomoon.eot?sx6yw0#iefix') format('embedded-opentype'),
+        url('fonts/icomoon.ttf?sx6yw0') format('truetype'),
+        url('fonts/icomoon.woff?sx6yw0') format('woff'),
+        url('fonts/icomoon.svg?sx6yw0#icomoon') format('svg');
     font-weight: normal;
     font-style: normal;
 }
@@ -24,8 +24,8 @@
     -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-timeline:before {
-    content: "\e900";
+.icon-question:before {
+    content: "\e907";
 }
 .icon-voice:before {
     content: "\e901";
@@ -44,5 +44,14 @@
 }
 .icon-treasure:before {
     content: "\e906";
+}
+.icon-children:before {
+    content: "\e908";
+}
+.icon-family:before {
+    content: "\e909";
+}
+.icon-timeline:before {
+    content: "\e900";
 }
 
