--- a/views/users/authenticate.jade
+++ b/views/users/authenticate.jade
@@ -4,7 +4,7 @@ block title
 block content
 	fieldset
 		legend Ingresar
-		form#formAuthenticate(action="" method="POST")
+		form#formAuthenticate(action="/authenticate" method="POST")
 			input(type='text', name='username', placeholder='Usuario', required)
 			input(type='password', name='password', placeholder='Contraseña', required)
 			button(type='submit')
