--- a/views/templates/templateAppChildren.jade
+++ b/views/templates/templateAppChildren.jade
@@ -19,6 +19,8 @@ html(lang='es')
 							span.icon-messages(tooltip="Mensajes")
 						a.item(href="/children/treasure")
 							span.icon-treasure(tooltip="Tesoros")
+						a.item(href="/logout")
+							span.icon-logout(tooltip="Cerrar Sesion")
 				section.titleSection
 					block titleSection
 			block content
