--- a/public/stylus/icomoon/style.styl
+++ b/public/stylus/icomoon/style.styl
@@ -1,10 +1,10 @@
 @font-face {
     font-family: 'icomoon';
-    src:    url('fonts/icomoon.eot?sx6yw0');
-    src:    url('fonts/icomoon.eot?sx6yw0#iefix') format('embedded-opentype'),
-        url('fonts/icomoon.ttf?sx6yw0') format('truetype'),
-        url('fonts/icomoon.woff?sx6yw0') format('woff'),
-        url('fonts/icomoon.svg?sx6yw0#icomoon') format('svg');
+    src:    url('fonts/icomoon.eot?ayxkk5');
+    src:    url('fonts/icomoon.eot?ayxkk5#iefix') format('embedded-opentype'),
+        url('fonts/icomoon.ttf?ayxkk5') format('truetype'),
+        url('fonts/icomoon.woff?ayxkk5') format('woff'),
+        url('fonts/icomoon.svg?ayxkk5#icomoon') format('svg');
     font-weight: normal;
     font-style: normal;
 }
@@ -24,6 +24,15 @@
     -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-check-in:before {
+    content: "\e90c";
+}
+.icon-children:before {
+    content: "\e908";
+}
+.icon-family:before {
+    content: "\e909";
+}
 .icon-question:before {
     content: "\e907";
 }
@@ -45,11 +54,11 @@
 .icon-treasure:before {
     content: "\e906";
 }
-.icon-children:before {
-    content: "\e908";
+.icon-login:before {
+    content: "\e90a";
 }
-.icon-family:before {
-    content: "\e909";
+.icon-logout:before {
+    content: "\e90b";
 }
 .icon-timeline:before {
     content: "\e900";
