--- a/views/templates/templateAppManagement.jade
+++ b/views/templates/templateAppManagement.jade
@@ -19,6 +19,8 @@ html(lang='es')
 							span.icon-timeline(tooltip="Linea De Evolucion")
 						a.item(href="/management/collections")
 							span.icon-database(tooltip="Collecione")
+						a.item(href="/logout")
+							span.icon-logout(tooltip="Cerrar Sesion")
 				section.titleSection
 					block titleSection
 			block content
