Avance en vista de edicion de colecciones (MongoDB)

--- a/views/children/activities.jade
+++ b/views/children/activities.jade
@@ -26,5 +26,5 @@ block content
 					article.date
 						p(rol="time")
 	include ../templates/confirmActivityWindow.jade
-block script
+block scripts
 	script(src="/js/activities.js")
