--- a/views/management/statistics.jade
+++ b/views/management/statistics.jade
@@ -6,3 +6,93 @@ block titleSection
 	p Estadisticas
 
 block content
+	section.statistics
+		article.statistic
+			h2 Actividades Completadas
+			p Actividdes completadas en un rango de tiempo determinado
+			template.optionsStatistic
+				form.form.formOnlyInpu
+					article.inputContainer
+						input(type='date', name='fini', placeholder='Fecha de Inicio', required)
+					article.inputContainer
+						input(type='date', name='ffin', placeholder='Fecha Final', required)
+					article.inputContainer
+						input(type="checkbox" name="all" id="all")
+						label(for="all") Desde el Origien
+		article.statistic
+			h2 Actividades Completadas
+			p Actividdes completadas en un rango de tiempo determinado
+			template.optionsStatistic
+				form.form.formOnlyInpu
+					article.inputContainer
+						input(type='date', name='fini', placeholder='Fecha de Inicio', required)
+					article.inputContainer
+						input(type='date', name='ffin', placeholder='Fecha Final', required)
+					article.inputContainer
+						input(type="checkbox" name="all" id="all")
+						label(for="all") Desde el Origien
+		article.statistic
+			h2 Actividades Completadas
+			p Actividdes completadas en un rango de tiempo determinado
+			template.optionsStatistic
+				form.form.formOnlyInpu
+					article.inputContainer
+						input(type='date', name='fini', placeholder='Fecha de Inicio', required)
+					article.inputContainer
+						input(type='date', name='ffin', placeholder='Fecha Final', required)
+					article.inputContainer
+						input(type="checkbox" name="all" id="all")
+						label(for="all") Desde el Origien
+		article.statistic
+			h2 Actividades Completadas
+			p Actividdes completadas en un rango de tiempo determinado
+			template.optionsStatistic
+				form.form.formOnlyInpu
+					article.inputContainer
+						input(type='date', name='fini', placeholder='Fecha de Inicio', required)
+					article.inputContainer
+						input(type='date', name='ffin', placeholder='Fecha Final', required)
+					article.inputContainer
+						input(type="checkbox" name="all" id="all")
+						label(for="all") Desde el Origien
+		article.statistic
+			h2 Actividades Completadas
+			p Actividdes completadas en un rango de tiempo determinado
+			template.optionsStatistic
+				form.form.formOnlyInpu
+					article.inputContainer
+						input(type='date', name='fini', placeholder='Fecha de Inicio', required)
+					article.inputContainer
+						input(type='date', name='ffin', placeholder='Fecha Final', required)
+					article.inputContainer
+						input(type="checkbox" name="all" id="all")
+						label(for="all") Desde el Origien
+		article.statistic
+			h2 Actividades Completadas
+			p Actividdes completadas en un rango de tiempo determinado
+			template.optionsStatistic
+				form.form.formOnlyInpu
+					article.inputContainer
+						input(type='date', name='fini', placeholder='Fecha de Inicio', required)
+					article.inputContainer
+						input(type='date', name='ffin', placeholder='Fecha Final', required)
+					article.inputContainer
+						input(type="checkbox" name="all" id="all")
+						label(for="all") Desde el Origien
+		article.statistic
+			h2 Actividades Completadas
+			p Actividdes completadas en un rango de tiempo determinado
+			template.optionsStatistic
+				form.form.formOnlyInpu
+					article.inputContainer
+						input(type='date', name='fini', placeholder='Fecha de Inicio', required)
+					article.inputContainer
+						input(type='date', name='ffin', placeholder='Fecha Final', required)
+					article.inputContainer
+						input(type="checkbox" name="all" id="all")
+						label(for="all") Desde el Origien
+	section.containerOptionsStatistic
+block script
+	script(src="/js/statistic.js")
+
+
