--- a/public/stylus/lib/forms.styl
+++ b/public/stylus/lib/forms.styl
@@ -1,22 +1,23 @@
-.formRound
+.form
 	.inputContainer
 		align-items center
 		display flex
 		margin-bottom 5px
 		input, select
-			width 70%
 		.label
 			font-size 1.5rem
 			font-weight bold
 			padding-right 5px
 			text-align right
-			width 30%
 		.input
 			//input
 		.select
 			//select
 		.check
 			//radio/checkbox
+		.button
+			width auto
+			margin 0 auto
 	input, select
 		appearance: none
 		border 1px solid gray
@@ -26,4 +27,14 @@
 		padding 3px
 		&:focus
 			box-shadow 0px 0px 11px 0px rgba(0,0,0,0.1)
+	&LabelInput
+		input, select
+			width 70%
+		.label
+			width 70%
+	&OnlyInput
+		input, select
+			width 50%
+			margin 0 auto
+
 
