--- a/public/stylus/styles.styl
+++ b/public/stylus/styles.styl
@@ -153,7 +153,36 @@ header
 	.btn
 		width 40%
 
-/*Templates management*/
+/*Collections */
+.documents
+	.documentDB
+		border: 1px solid gray;
+		padding: 5px;
+		margin: 20px 2px;
+		border-radius: 5px;
+/*Collections */
+
+/*Estadisticas*/
+.statistics
+	display flex
+	flex-wrap wrap
+	.statistic
+		cursor pointer
+		text-align center
+		width 96%
+		margin 1%
+		padding 1%
+		border 1px solid gray
+		border-radius 2px
+.containerOptionsStatistic
+	background-color white
+	position fixed
+	bottom 0px
+	padding 20px 0
+	width 100%
+	box-shadow 0 10px 30px rgba(0,0,0,0.3)
+/*Estadisticas*/
+
 .styleBlue
 	background-color baseBlue
 .styleGreen
