--- a/views/templates/templateAppChildren.jade
+++ b/views/templates/templateAppChildren.jade
@@ -2,7 +2,7 @@ doctype html
 html(lang='es')
 	head
 		meta(charset='UTF-8')
-		meta(name='viewport' content="width=width-device, user-scalable=no, initial-scale=1.0" )
+		meta(name='viewport' content="width=device-width, user-scalable=no, initial-scale=1.0" )
 		block title
 		link(rel='stylesheet', href='/css/styles.css')
 	body
