--- a/views/users/authenticate.jade
+++ b/views/users/authenticate.jade
@@ -1,11 +1,16 @@
 extends ../templates/template.jade
 block title
 	title Ingresar
+
+block titleSection
+	p Ingesar
+
 block content
-	fieldset
-		legend Ingresar
-		form#formAuthenticate(action="/authenticate" method="POST")
+	form#formAuthenticate.form.formOnlyInput(action="/authenticate" method="POST")
+		article.inputContainer
 			input(type='text', name='username', placeholder='Usuario', required)
+		article.inputContainer
 			input(type='password', name='password', placeholder='Contraseña', required)
-			button(type='submit')
+		article.inputContainer
+			button.btn.btnSuccess.button(type='submit')
 				span Ingresar
