--- a/views/users/checkIn.jade
+++ b/views/users/checkIn.jade
@@ -1,14 +1,29 @@
 extends ../templates/template.jade
 block title
 	title Registro
+
+block titleSection
+	p Registrarse
+
 block content
-	fieldset
-		legend Registro
-		form#formCheckIn(action="/check-in" method="POST")
-			input(type="text" name="nameChildren" id="nameChildren" placeholder="Nombre Niño")
-			input(type="text" name="nameFather" id="nameFather" placeholder="Nombre Padre")
-			input(type="text" name="username" id="username" placeholder="Usuario")
-			input(type="text" name="password" id="password" placeholder="Contraseña")
-			input(type="text" name="confirmPassword" id="confirmPassword" placeholder="confirmar Contraseña")
-			button.btn.btnSuccess(type='submit')
-				span Registro
+	form#formCheckIn.form.formOnlyInput(action="/check-in" method="POST")
+		article.inputContainer
+			input(type="text" name="nameChildren" id="nameChildren" placeholder="Nombre Niño" required)
+		article.inputContainer
+			input(type="text" name="nameFather" id="nameFather" placeholder="Nombre Padre" required)
+		article.inputContainer
+			input(type="text" name="username" id="username" placeholder="Usuario" required)
+		article.inputContainer
+			input(type="password" name="password" id="password" placeholder="Contraseña" required)
+		article.inputContainer
+			input(type="password" name="confirmPassword" id="confirmPassword" placeholder="Confirmar Contraseña" required)
+		button.btn.btnSuccess(type='submit')
+			span Registro
+	script.
+		var formCheckIn = document.querySelector('#formCheckIn')
+		formCheckIn.onsubmit = function(e){
+			if (formCheckIn.password.value != formCheckIn.confirmPassword.value){
+				event.preventDefault()
+					alert("Las contraseñas no coinciden")
+				}
+		}
